[package]
name = "new-rawr"
version = "0.0.1"
authors = ["Wyatt Jacob Herkamp <wherkamp@kingtux.me>","Aurora0001 <aurora01@safe-mail.net>"]
license = "MIT"
repository = "https://github.com/wherkamp/new-rawr"
description = "An updated Rust API Wrapper for Reddit"
edition = "2018"

exclude = [
  "**/*.out",
  "**/*.lock",
  "**/*.yml",
  "**/*.sh"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
hyper = {version = "0.14.4",features = ["full"]}
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.13"
base64 = "0.13.0"
async-trait = "0.1.50"
[dev-dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"